<resources>
    <string name="app_name">Stop Car Captain</string>
    <string name="plz_img">please_select_img</string>
    <string name="plz_camera_gallery">please_choose_camera_gallery</string>
    <string name="camera">Camera</string>
    <string name="images">Images</string>
    <string name="please_activate_permission">Please activate permission</string>
    <string name="camera_closed">Camera closed</string>
    <string name="failed_to_open_camera">Camera failure</string>
    <string name="cancel">cancel</string>
    <string name="user_deleted">user deleted</string>
    <string name="no_network">no internet connection</string>
    <string name="login">Login</string>
    <string name="password">PASSWORD</string>
    <string name="forget_pass">FORGET PASSWORD?</string>
    <string name="email">EMAIL</string>
    <string name="firstname">FIRSTNAME</string>
    <string name="lastname">LASTNAME</string>
    <string name="next">NEXT</string>
    <string name="done">DONE</string>
    <string name="cash">Cash</string>
    <string name="paypal">Paypal</string>
    <string name="choose_how">Choose how you want from Stop Car how to help you</string>
    <string name="continu">continue</string>
    <string name="driver_lincese">Driver license</string>
    <string name="vecil_lincese">Vehicle license</string>
    <string name="reg">Registeration</string>
    <string name="required">required</string>
    <string name="ph">Please Insert Number</string>
    <string name="emailnotcorrect">email not correct</string>
    <string name="register">Register</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">submit</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="phone_or_email">Phone or email</string>
    <string name="your_email">your email address</string>
    <string name="dont_worry_just_enter_your_email_or_phone_below_and_we_will_send_you_the_password_reset_instructions">Dont worry! just enter your email or phone below and we will send you the password reset instructions</string>
    <string name="reset_password">Reset Password</string>
    <string name="verifypassword">Verify Password</string>
    <string name="select_car_type">Select car type</string>
    <string name="select_truck_type">Select truck Type</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="color">Color</string>
    <string name="Add_Vehicle_details">Add Vehicle details</string>
    <string name="uplaod_documents">Uplaod documents</string>
    <string name="plz_fill_data">please fill all data</string>
    <string name="welcome_to_nashmi">Welcome to Stop Car</string>
    <string name="online">Online</string>
    <string name="plate_number">Plate number</string>


    <string name="pickup_request">Pickup Request</string>
    <string name="min">min</string>
    <string name="min_time">min.time</string>
    <string name="east_earn">Esti.earn</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">Reject</string>
    <string name="pick_up">Pick Up</string>
    <string name="enter_drop_location">Go to location</string>
    <string name="home">Home</string>
    <string name="earnings">Earnings</string>
    <string name="ratings">Ratings</string>
    <string name="accounts">Accounts</string>
    <string name="offline">Offline</string>
    <string name="iarriaved">I arrived</string>
    <string name="start_trip">Start Trip</string>
    <string name="end_trip">End trip</string>
    <string name="On_Trip">On Trip</string>
    <string name="cash_collected">Cash collected</string>
    <string name="total_fare">TOTAL FARE</string>
    <string name="total_distance">TOTAL DISTANCE</string>
    <string name="Collechcash">Collech Cash</string>
    <string name="rate_now">Rate now</string>
    <string name="need_help">need help?</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="distance">Distance</string>
    <string name="review_your_trip">Review your trip</string>
    <string name="today_trip">Today\'s trip</string>
    <string name="my_earning">My Earning</string>
    <string name="spend_time">Spend time</string>
    <string name="completed_trip">Completed trip</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="waybill">Waybill</string>
    <string name="documents">Documents</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="trips">Trips</string>
    <string name="complete_rate_data">complete rate data</string>
    <string name="trip_canceld">"Trip cancelled by user"</string>
    <string name="km">km</string>
    <string name="today">Today</string>
    <string name="weakly">Weekly</string>
    <string name="weak_trip">week trip</string>
    <string name="update_documents">update documents</string>
    <string name="price">price</string>
    <string name="plz_select_lang">Please Select Language</string>

    <string name="code">Code</string>
    <string name="password_not_match">Password not match</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forget_pass_str">Forget password</string>
    <string name="total">Total</string>
    <string name="no_loc">No location</string>
    <string name="open">Please Open GPS Provider</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="notifications">Notifications</string>
    <string name="open_request">open request</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="type_of_good">Type of goods</string>
    <string name="notes">Notes</string>
    <string name="your_price">Your Price:</string>
    <string name="send">send</string>
    <string name="you_currently_have_no_requests">You currently have no requests</string>
    <string name="Sendtherequest">Send the request</string>
    <string name="your_request_is_pending">Your request is pending</string>
    <string name="the_company_will_respond_to_your_request_at_the_right_price_and_must_be_approved_by_your_authority_for_the_winding_up">The company will respond to your request at the right price and must be approved by your authority for the winding up</string>
    <string name="ok">OK</string>
    <string name="Please_enter_the_price">Please enter the price</string>
    <string name="trip_fare">Trip Fare</string>
    <string name="rider_discount">Rider discount</string>
    <string name="outstanding_from_last_trip">Outstanding from last trip</string>
    <string name="request_done">Request done</string>
    <string name="my_credit">My credit :</string>
    <string name="call">Call</string>
    <string name="deliver_me">Deliver me</string>
    <string name="accept_policy">Accept Policy and restrictions</string>
    <string name="must_accept_policy">Must accept policy</string>
    <string name="policy">Policy</string>
    <string name="insurance">Vechile Insurance</string>
    <string name="checkup">Vechile CheckUp</string>
    <string name="segel">رفع صوره السجل</string>
    <string name="baladaya">upload government license</string>
    <string name="requireddd">Required</string>
    <string name="estmart_sayara">car application</string>
    <string name="driver_license">driver license</string>
    <string name="rodod_numb">number of reassembles</string>
    <string name="contactus">Contact us</string>
    <string name="trip_type">trip type</string>
    <string name="order_date">order date</string>
    <string name="nashmi_tax">Stop Car bill</string>
    <string name="billtaxies">bill tax</string>
    <string name="whatsnotfound">Whats app not found</string>
    <string name="collecting">Collecting</string>
    <string name="collected">تم التحصيل</string>
    <string name="make_transactions">Make Transactions</string>
    <string name="balance">Balance</string>
    <string name="send_to_admin">Send to Admin</string>
    <string name="send_admin">Send to Admin</string>
    <string name="request_admin">Request From Admin</string>
    <string name="nashmi_cash">Ather cash</string>
    <string name="my_cash">My Cash</string>
    <string name="this_week">This Week</string>
    <string name="payment_details">Payment Details</string>
    <string name="make_transaction">Make Transaction</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="payments">Payments</string>

    <string name="bank_name">Bank name</string>
    <string name="account_num">account number</string>
    <string name="name">name</string>
    <string name="iban">iban</string>
    <string name="whatsapp">whatsapp or sms</string>
    <string name="whatsup_msg">After payment please send on whatsup or sms</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="visa">visa</string>
    <string name="order_notes">Order notes</string>
    <string name="history">history</string>
    <!-- TODO: chatNow -->
    <string name="chat_now">Start a chat session now</string>
    <string name="delay_time">Delay time</string>
    <string name="trip_id">Trip ID</string>
</resources>
