<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:minWidth="10000dp"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context=".fragment.DialogSendOrderFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="60dp"
            app:srcCompat="@drawable/checkmmark"
            android:layout_gravity="center"

            android:layout_height="30dp" />

        <TextView
            android:id="@+id/ReplyFrom"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:padding="10dp"
            android:fontFamily="@font/fofo11"
            android:textColor="#323232"
            android:layout_gravity="center"
            android:text="@string/your_request_is_pending"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:layout_height="1dp" />



    <TextView
        android:layout_width="wrap_content"
        android:textSize="18dp"
        android:padding="10dp"
        android:textColor="#323232"
         android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/the_company_will_respond_to_your_request_at_the_right_price_and_must_be_approved_by_your_authority_for_the_winding_up"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/done"
        android:padding="16dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:text="@string/done"
        android:textColor="@color/color_black"
        android:layout_height="wrap_content" />

</LinearLayout>