<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.SendOrderActivity">

    <include layout="@layout/layout_back1" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"

        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:visibility="gone"
             app:srcCompat="@drawable/ic_add"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardElevation="4dp"
             app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/color_white"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                 android:gravity="center"
                android:layout_marginTop="30dp"
android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_height="wrap_content">



<ImageView
    android:id="@+id/image"
    android:layout_width="100dp"
     app:srcCompat="@mipmap/ic_launcher"
    android:layout_height="100dp" />

                <EditText
                    android:id="@+id/from"
                    android:layout_width="match_parent"
                    android:layout_marginTop="25dp"
                    android:hint="@string/from"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textColorHint="#373737"
                    android:background="@drawable/gender"
                    android:layout_height="70dp" />
                <EditText
                    android:hint="@string/to"
                    android:id="@+id/to"
                    android:layout_width="match_parent"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textColorHint="#373737"
                    android:background="@drawable/gender"
                    android:layout_height="70dp" />
                <EditText
                    android:id="@+id/type_of_goods"
                    android:hint="@string/type_of_good"
                    android:layout_width="match_parent"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textColorHint="#373737"
                    android:background="@drawable/gender"
                    android:layout_height="70dp" />


                <EditText
                    android:id="@+id/notes"
                    android:hint="@string/notes"
                    android:layout_width="match_parent"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textColorHint="#373737"
                    android:background="@drawable/gender"
                    android:layout_height="70dp" />










            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </FrameLayout>
        <mehdi.sakout.fancybuttons.FancyButton
            android:layout_gravity="end"
            xmlns:fancy="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="37dp"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp"
            android:id="@+id/send"
            fancy:fb_borderColor="@color/colorPrimary"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/colorPrimary"
            fancy:fb_focusColor="@color/colorPrimary"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/Sendtherequest"
            fancy:fb_textColor="@color/white"
            />


    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>