<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.AccountFragment">

    <!-- todo centerCrop -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="250dp">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/c1" />
            <ImageView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="#6A000000" />

        </FrameLayout>
<LinearLayout
    android:layout_gravity="center"
    android:gravity="center"

    android:layout_marginTop="30dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/carimage"
        android:layout_gravity="center"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/googleg_standard_color_18" />

    <androidx.cardview.widget.CardView
        android:layout_marginBottom="30dp"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:cardBackgroundColor="@color/color_white"
        app:cardCornerRadius="3dp">

        <LinearLayout
            android:id="@+id/edit"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/name"
                    style="@style/MediumText"
                    android:text="Ahmed awaad"
                    android:textColor="#272727"  />


                <TextView
                    style="@style/SmallText"
                    android:layout_marginTop="8dp"
                    android:text="@string/edit_profile"
                    android:textColor="@color/graydark" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/waybill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:visibility="gone">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:textColor="#272727" 
                    app:srcCompat="@drawable/ic_i13" />


                <TextView
                    style="@style/MediumText"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:text="@string/waybill"
                    android:textColor="#272727"  />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/documents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:visibility="gone">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:textColor="#272727" 
                    app:srcCompat="@drawable/ic_i14" />


                <TextView
                    style="@style/MediumText"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:text="@string/documents"
                    android:textColor="#272727"  />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/not"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:textColor="#272727" 
                    app:srcCompat="@drawable/ic_notifications" />


                <TextView
                    style="@style/MediumText"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:text="@string/notifications"
                    android:textColor="#272727" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/historyDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:textColor="#272727" 
                    app:srcCompat="@drawable/ic_i16" />


                <TextView
                    style="@style/MediumText"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:text="@string/history"
                    android:textColor="#272727"  />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:textColor="#272727" 
                    app:srcCompat="@drawable/ic_i15" />


                <TextView
                    style="@style/MediumText"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:text="@string/settings"
                    android:textColor="#272727"  />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:textColor="#272727" 
                    app:srcCompat="@drawable/ic_i16" />


                <TextView
                    style="@style/MediumText"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:text="@string/about"
                    android:textColor="#272727"  />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:textColor="#272727" 
                    app:srcCompat="@drawable/ic_i17" />


                <TextView
                    style="@style/MediumText"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:text="@string/help"
                    android:textColor="#272727"  />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/contactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:textColor="#272727" 
                    app:srcCompat="@drawable/ic_i17" />


                <TextView
                    style="@style/MediumText"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:text="@string/contactus"
                    android:textColor="#272727"  />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/paymentDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:textColor="#272727" 
                    app:srcCompat="@drawable/ic_i16" />


                <TextView
                    style="@style/MediumText"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:text="@string/payments"
                    android:textColor="#272727"  />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:textColor="#272727" 
                    app:srcCompat="@drawable/ic_i18" />


                <TextView
                    style="@style/MediumText"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:text="@string/logout"
                    android:textColor="#272727"  />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>