<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFFFF"
    android:orientation="vertical">


    <include layout="@layout/layout_back" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/sms"
        app:tint="@color/colorPrimary" />


    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/fofo12"
        android:text="testtt"
        android:textColor="#000" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_otp"
            android:inputType="number"
            android:textColor="@color/cardview"
            android:textColorHint="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>


    <mehdi.sakout.fancybuttons.FancyButton
        xmlns:fancy="http://schemas.android.com/apk/res-auto"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        fancy:fb_borderColor="@color/colorPrimary"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPrimary"
        fancy:fb_focusColor="@color/colorPrimaryDark"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/submit"
        fancy:fb_textColor="@color/white" />



    <TextView
        android:id="@+id/btnResendCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/color_white"
        android:gravity="center"
        android:text="@string/resend_code" />

</LinearLayout>
