<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stopgroup.stopcar.captain.activity.VerifyMobileActivity">


    <include layout="@layout/layout_back"/>

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/padlock"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="Forget Your Password ?"
        android:fontFamily="@font/fofo12"
        android:textColor="#2B2B2B"
        android:textSize="18dp"
        />
    <TextView
        android:id="@+id/name"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/dont_worry_just_enter_your_email_or_phone_below_and_we_will_send_you_the_password_reset_instructions"

        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_email"
            android:textColor="@color/cardview"
            android:textColorHint="@color/gray" />

    </com.google.android.material.textfield.TextInputLayout>





    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <mehdi.sakout.fancybuttons.FancyButton
        xmlns:fancy="http://schemas.android.com/apk/res-auto"
        android:paddingBottom="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:paddingTop="10dp"
        android:id="@+id/btnSubmit"
        fancy:fb_borderColor="@color/colorPrimary"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"

        fancy:fb_focusColor="@color/colorPrimaryDark"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/reset_password"
        fancy:fb_textColor="#FFFFFF" />
</LinearLayout>
